chore: updated lang

--- a/src/main/resources/assets/remove-darkness-effect-remastered/lang/en_us.json
+++ b/src/main/resources/assets/remove-darkness-effect-remastered/lang/en_us.json
@@ -3,5 +3,6 @@
   "key.categories.rde": "Remove Darkness Effect",
   "key.category.rde.title": "Remove Darkness Effect",
   "message.rde.enabled": "Darkness removal enabled",
-  "message.rde.disabled": "Darkness removal disabled"
+  "message.rde.disabled": "Darkness removal disabled",
+  "message.rde.unsupported": "Server does not support darkness removal"
 }
