--- a/src/main/resources/assets/remove-darkness-effect-remastered/lang/de_de.json
+++ b/src/main/resources/assets/remove-darkness-effect-remastered/lang/de_de.json
@@ -3,5 +3,6 @@
   "key.categories.rde": "Dunkelheitseffekt entfernen",
   "key.category.rde.title": "Remove Darkness Effect",
   "message.rde.enabled": "Dunkelheitsentfernung aktiviert",
-  "message.rde.disabled": "Dunkelheitsentfernung deaktiviert"
+  "message.rde.disabled": "Dunkelheitsentfernung deaktiviert",
+  "message.rde.unsupported": "Server unterstützt die Dunkelheitsentfernung nicht"
 }
