--- a/src/main/resources/assets/remove-darkness-effect-remastered/lang/en_us.json
+++ b/src/main/resources/assets/remove-darkness-effect-remastered/lang/en_us.json
@@ -4,5 +4,6 @@
   "key.category.rde.title": "Remove Darkness Effect",
   "message.rde.enabled": "Darkness removal enabled",
   "message.rde.disabled": "Darkness removal disabled",
-  "message.rde.unsupported": "Server does not support darkness removal"
+  "message.rde.unsupported": "Server does not support darkness removal",
+  "message.rde.server_warning": "Warning: This server may treat Remove Darkness Effect as a cheat. Disable the mod to avoid possible bans."
 }
