--- a/src/main/resources/assets/remove-darkness-effect-remastered/lang/ru_ru.json
+++ b/src/main/resources/assets/remove-darkness-effect-remastered/lang/ru_ru.json
@@ -4,5 +4,6 @@
   "key.category.rde.title": "Remove Darkness Effect",
   "message.rde.enabled": "Udalenie temnoty vkliucheno",
   "message.rde.disabled": "Udalenie temnoty otkliucheno",
-  "message.rde.unsupported": "Server ne podderzhivaet udalenie temnoty"
+  "message.rde.unsupported": "Server ne podderzhivaet udalenie temnoty",
+  "message.rde.server_warning": "Preduprezhdenie: etot server mozhet schitat Remove Darkness Effect chitom. Otkliuchite mod, chtoby izbezhat vozmozhnogo bana."
 }
