--- a/src/main/resources/assets/remove-darkness-effect-remastered/lang/es_es.json
+++ b/src/main/resources/assets/remove-darkness-effect-remastered/lang/es_es.json
@@ -4,5 +4,6 @@
   "key.category.rde.title": "Remove Darkness Effect",
   "message.rde.enabled": "Eliminacion de oscuridad activada",
   "message.rde.disabled": "Eliminacion de oscuridad desactivada",
-  "message.rde.unsupported": "El servidor no admite eliminar la oscuridad"
+  "message.rde.unsupported": "El servidor no admite eliminar la oscuridad",
+  "message.rde.server_warning": "Advertencia: este servidor podría considerar Remove Darkness Effect como una trampa. Desactiva el mod para evitar posibles baneos."
 }
